manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: derms-api
  labels:
    app: derms-api
spec:
  selector:
    matchLabels:
      app: derms-api
  template:
    metadata:
      labels:
        app: derms-api
    spec:
      containers:
        - name: default
          image: 152368484097.dkr.ecr.ca-central-1.amazonaws.com/derms/api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
