manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: derms-api
spec:
  selector:
    app: derms-api
  ports:
    - name: api
      protocol: TCP
      port: 80
      targetPort: 80
